@@ -1,3 +1,6 @@
+24 February 2011: Wouter
+	- bug #361: Fix, time.elapsed variable not reset with stats_noreset.
+
 23 February 2011: Wouter
 	- iana portlist updated.
 	- common.sh to version 3.
